# cmake-tests

./: CMakeLists.txt
cmake-tester/: CMakeLists.txt  cmake_tester.cc  cmake_tester.h
exe/: CMakeLists.txt  exe.cc
tests/: CMakeLists.txt  some_test.cc
